# bscThesis

benchmark-results/21-out-of-30/frost/frost_aggregation/base/: raw.csv
benchmark-results/21-out-of-30/frost/frost_aggregation/new/: estimates.json  sample.json  tukey.json
benchmark-results/21-out-of-30/frost/frost_aggregation/report/: index.html
benchmark-results/21-out-of-30/frost/frost_initiation/base/: estimates.json  tukey.json
benchmark-results/21-out-of-30/frost/frost_initiation/new/: raw.csv  sample.json
benchmark-results/21-out-of-30/frost/frost_initiation/report/: index.html
benchmark-results/21-out-of-30/frost/frost_signing/base/: estimates.json  raw.csv  sample.json  (+1 more)
benchmark-results/21-out-of-30/hotstuff/multisig/: qc_latency.csv
benchmark-results/21-out-of-30/hotstuff/roast/: qc_latency.csv
benchmark-results/3-out-of-4/hotstuff/multisig/: qc_latency.csv
benchmark-results/3-out-of-4/hotstuff/roast/: qc_latency.csv
benchmark-results/34-out-of-50/hotstuff/multisig/: qc_latency.csv
benchmark-results/34-out-of-50/hotstuff/roast/: qc_latency.csv
benchmark-results/667-out-of-1000/frost/report/: index.html
benchmark-results/667-out-of-1000/multisig/report/: index.html
benchmark-results/67-out-of-100/hotstuff/multisig/: qc_latency.csv
benchmark-results/67-out-of-100/hotstuff/roast/: qc_latency.csv
benchmark-results/7-out-of-10/hotstuff/multisig/: qc_latency.csv
benchmark-results/7-out-of-10/hotstuff/roast/: qc_latency.csv
tests/: Cargo.toml  run_bench_and_plot.sh
tests/benches/: benchmark.rs  benchmark_old.rs  multisig.rs  roast.rs
tests/src/: frost.rs  generate_signatures.rs  lib.rs  visualise.py  visualise_all.py  visualise_all_excsetup.py  visualise_hotstuff.py
(+237 files in other folders)
