[package]
name = "thesis"
version = "0.1.0"
edition = "2024" 

[dependencies]
ed25519-dalek = { version = "2", features = ["serde"] }
frost-ed25519 = { version = "2.1", features = ["serde"] }
old_rand = { package = "rand", version = "0.8", features = ["std"] }
hex = "0.4" 
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

roast = { path = "../roast" }
multisig = { path = "../multisig" }

# [dev-dependencies]
criterion = "0.5"

[[bench]]
name = "roast"
harness = false

[[bin]]
name = "generate_signatures"
path = "src/generate_signatures.rs"